fix: page header alignment

--- a/src/components/@shared/Page/PageHeader.module.css
+++ b/src/components/@shared/Page/PageHeader.module.css
@@ -41,14 +41,13 @@
   position: absolute;
   width: max-content;
   top: 1.8rem;
-  left: 2.7rem;
   color: var(--brand-gaia-x-blue);
 }
 
 .logoContainer svg {
   width: 15rem;
   height: 6rem;
-  padding-left: 5rem;
+  padding-left: 0rem;
 }
 
 @media (min-width: 40rem) {
